# retirement-calculator

./: .aiexclude  .gitignore  Cargo.toml  FIX_INSTRUCTIONS.md  PLAN_V8_4_WATERFALL.md  README.md  README_V7.2_Stable.md  REARCHITECTURE_INSTRUCTIONS.md  WINDOWS_DEPENDENCIES.md  fixes-v-8-0-0.md
.cargo/: config.toml
docs/: LOGIC_AND_LAW_REFERENCE_AUDIT-ORIG.md  V7_5_AUDIT.md  corrections-app-v-8-0-0.md  stage_08_correlated_mc_example.json
input/: TEMPLATE_scenario.json  test_crash_2030_stress_scenario.json  test_fx_shock_2032.json  test_stage_11a_disabled.json
logs/: V7.4_Logic_Audit.txt
src/: lib.rs  main.rs  reporter.rs
src/config/: loader.rs
src/engine/: cashflow_engine.rs  market_data.rs  mod.rs  real_estate_engine.rs  rsu_engine.rs  va_benefits.rs
src/handlers/: cashflow_manager.rs  contributions.rs  dividends.rs  mod.rs  rebalancing.rs  retirement_transition.rs  roth_rebalancer.rs  rsu_vesting.rs  tax_loss_harvesting.rs
src/models/: assets.rs  config.rs  constants.rs  expense.rs  mod.rs  real_estate.rs  rsu.rs  snapshot.rs
src/simulation/: mod.rs  (+4 more)
tests/: detailed_expenses.rs  diag_war_chest.rs  expense_ratio_test.rs  logic_audit.rs  mid_year_dependent_phaseout.rs  real_estate_test.rs  stage_08_correlated_mc.rs  stage_09_crypto_test.rs  stage_10_kaigo_hoken.rs  stage_11a_buffer_selection.rs  v7_10_estate_tax.rs  v7_6_distributions.rs  v7_7_2_rsu_sell_to_cover_realism.rs  v7_7_full_transition_test.rs  v7_8_fx_shock_ordering.rs  v7_8_nra_spouse.rs  v7_9_pfic_mtm_drift.rs  v7_tax_and_liquidation_test.rs  v8_0_corrections.rs  v8_2_account_snapshots.rs
(+23 files in other folders)
