[package]
name = "retirement-calculator"
version = "7.0.0"
edition = "2024"
authors = ["Old-Coder <13148627+ITNextLevel@users.noreply.github.com>"]

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
egui_plot = "0.29"
env_logger = "0.11"
log = "0.4"
rfd = "0.15"
rust_decimal = "1.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2.10"

[dev-dependencies]
proptest = "1.5"
